--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "axios": "^0.26.1",
+    "export-to-csv": "^0.2.1",
     "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-sortable-hoc": "^2.0.0",
     "react-webcam": "^7.0.0",
     "sortablejs": "^1.15.0",
     "typescript": "^4.6.2",
